force-app/main/default/objects/Participant__c/fields/Company_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Personal_Email__c</fullName>
    <label>Company/Personal Email</label>
    <type>Email</type>
</CustomField>