force-app/main/default/objects/Participant__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>