force-app/main/default/objects/Participant__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>