force-app/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Session__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>